feat: add structure refactor for tomato architecture